welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:-7: error: not found: value indexOfMaxValue
 val res = indexOfMaxValue( t.getParameter(0).asInstanceOf[Array[Int]]);
           ^indexOfMaxValue:4: error: not found: value max
    if (nums(i) > max)
                  ^